Lucene Benchmark Contrib Change Log

The Benchmark contrib package contains code for benchmarking Lucene in a variety of ways.

$Id:$

12/16/08
  LUCENE-1492: Added optional readOnly param (default true) to OpenReader task.

9/9/08
 LUCENE-1243: Added new sorting benchmark capabilities.  Also Reopen and commit tasks.  (Mark Miller via Grant Ingersoll)

5/10/08
  LUCENE-1090: remove relative paths assumptions from benchmark code.
  Only build.xml was modified: work-dir definition must remain so  
  benchmark tests can run from both trunk-home and benchmark-home.  
  
3/9/08
  LUCENE-1209: Fixed DocMaker settings by round. Prior to this fix, DocMaker settings of 
  first round were used in all rounds.  (E.g. term vectors.)
  (Mark Miller via Doron Cohen) 

1/30/08
  LUCENE-1156: Fixed redirect problem in EnwikiDocMaker.  Refactored ExtractWikipedia to use EnwikiDocMaker.  Added property to EnwikiDocMaker to allow
  for skipping image only documents.

1/24/2008
  LUCENE-1136: add ability to not count sub-task doLogic increment
  
1/23/2008
  LUCENE-1129: ReadTask properly uses the traversalSize value
  LUCENE-1128: Added support for benchmarking the highlighter

01/20/08
  LUCENE-1139: various fixes
  - add merge.scheduler, merge.policy config properties
  - refactor Open/CreateIndexTask to share setting config on IndexWriter
  - added doc.reuse.fields=true|false for LineDocMaker
  - OptimizeTask now takes int param to call optimize(int maxNumSegments)
  - CloseIndexTask now takes bool param to call close(false) (abort running merges)


01/03/08
  LUCENE-1116: quality package improvements:
  - add MRR computation; 
  - allow control of max #queries to run;
  - verify log & report are flushed.
  - add TREC query reader for the 1MQ track.  
      
12/31/07
  LUCENE-1102: EnwikiDocMaker now indexes the docid field, so results might not be comparable with results prior to this change, although
  it is doubted that this one small field makes much difference.
  
12/13/07