@@ -539,6 +539,7 @@ Here is a list of currently defined properties:
     </li><li>query.maker
     </li><li>file.query.maker.file
     </li><li>file.query.maker.default.field
+    </li><li>search.num.hits
     </li></ul>
   </li>
 
