@@ -179,7 +179,20 @@ name|lucene
 operator|.
 name|search
 operator|.
-name|Hits
+name|TopDocs
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|ScoreDoc
 import|;
 end_import
 begin_import
@@ -310,7 +323,7 @@ name|Directory
 import|;
 end_import
 begin_comment
-comment|/**  * Read index (abstract) task.  * Sub classes implement withSearch(), withWarm(), withTraverse() and withRetrieve()  * methods to configure the actual action.  *<p/>  *<p>Note: All ReadTasks reuse the reader if it is already open.  * Otherwise a reader is opened at start and closed at the end.  *<p/>  *<p>Other side effects: none.  */
+comment|/**  * Read index (abstract) task.  * Sub classes implement withSearch(), withWarm(), withTraverse() and withRetrieve()  * methods to configure the actual action.  *<p/>  *<p>Note: All ReadTasks reuse the reader if it is already open.  * Otherwise a reader is opened at start and closed at the end.  *<p>  * The<code>search.num.hits</code> config parameter sets  * the top number of hits to collect during searching.  *<p>Other side effects: none.  */
 end_comment
 begin_class
 DECL|class|ReadTask
@@ -497,9 +510,23 @@ init|=
 name|getSort
 argument_list|()
 decl_stmt|;
-name|Hits
+name|TopDocs
 name|hits
 decl_stmt|;
+specifier|final
+name|int
+name|numHits
+init|=
+name|numHits
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|numHits
+operator|>
+literal|0
+condition|)
+block|{
 if|if
 condition|(
 name|sort
@@ -515,6 +542,10 @@ name|search
 argument_list|(
 name|q
 argument_list|,
+literal|null
+argument_list|,
+name|numHits
+argument_list|,
 name|sort
 argument_list|)
 expr_stmt|;
@@ -528,20 +559,27 @@ operator|.
 name|search
 argument_list|(
 name|q
+argument_list|,
+name|numHits
 argument_list|)
 expr_stmt|;
 block|}
-comment|//System.out.println("searched: "+q);
+comment|//System.out.println("q=" + q + ":" + hits.totalHits + " total hits");
 if|if
 condition|(
 name|withTraverse
 argument_list|()
-operator|&&
-name|hits
-operator|!=
-literal|null
 condition|)
 block|{
+specifier|final
+name|ScoreDoc
+index|[]
+name|scoreDocs
+init|=
+name|hits
+operator|.
+name|scoreDocs
+decl_stmt|;
 name|int
 name|traversalSize
 init|=
@@ -549,10 +587,9 @@ name|Math
 operator|.
 name|min
 argument_list|(
-name|hits
+name|scoreDocs
 operator|.
 name|length
-argument_list|()
 argument_list|,
 name|traversalSize
 argument_list|()
@@ -581,10 +618,9 @@ argument_list|(
 name|numToHighlight
 argument_list|()
 argument_list|,
-name|hits
+name|scoreDocs
 operator|.
 name|length
-argument_list|()
 argument_list|)
 decl_stmt|;
 name|Analyzer
@@ -650,12 +686,12 @@ block|{
 name|int
 name|id
 init|=
-name|hits
-operator|.
-name|id
-argument_list|(
+name|scoreDocs
+index|[
 name|m
-argument_list|)
+index|]
+operator|.
+name|doc
 decl_stmt|;
 name|res
 operator|++
@@ -782,6 +818,7 @@ block|}
 block|}
 block|}
 block|}
+block|}
 name|searcher
 operator|.
 name|close
@@ -869,6 +906,59 @@ return|return
 name|Integer
 operator|.
 name|MAX_VALUE
+return|;
+block|}
+DECL|field|DEFAULT_SEARCH_NUM_HITS
+specifier|static
+specifier|final
+name|int
+name|DEFAULT_SEARCH_NUM_HITS
+init|=
+literal|10
+decl_stmt|;
+DECL|field|numHits
+specifier|private
+name|int
+name|numHits
+decl_stmt|;
+DECL|method|setup
+specifier|public
+name|void
+name|setup
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|super
+operator|.
+name|setup
+argument_list|()
+expr_stmt|;
+name|numHits
+operator|=
+name|getRunData
+argument_list|()
+operator|.
+name|getConfig
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|"search.num.hits"
+argument_list|,
+name|DEFAULT_SEARCH_NUM_HITS
+argument_list|)
+expr_stmt|;
+block|}
+comment|/**    * Specify the number of hits to retrieve.  Tasks should override this if they want to restrict the number    * of hits that are collected during searching. Must be greater than 0.    *    * @return 10 by default, or search.num.hits config if set.    */
+DECL|method|numHits
+specifier|public
+name|int
+name|numHits
+parameter_list|()
+block|{
+return|return
+name|numHits
 return|;
 block|}
 comment|/**    * Return true if, with search& results traversing, docs should be retrieved.    */
